--- a/styles.css
+++ b/styles.css
@@ -131,8 +131,7 @@ header nav {
 
 header nav ul li {
   font-size: 20px;
-  /* display: inline-block; */
-  margin-right: 20px
+  margin-right: 20px;
   color: #39ADD1;
 }
 
